broidery-frontend/overlays/k3s/ingress-bg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broidery-frontend-bg
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
#    nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - broidery-bg.k3s
      secretName: broidery-bg.k3s.cloud-tls
  rules:
  - host: broidery-bg.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: broidery-frontend
            port: 
              name: http
