broidery-frontend/overlays/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broidery-frontend
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - broidery.k3s
      secretName: broidery.k3s.cloud-tls
  rules:
  - host: broidery.k3s
    http:
      paths:
      - path: /.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: broidery-frontend
            port: 
              name: http
